test/syc/bad/unsignedunsigned.c
/*
 * Two unsigned specifiers
 */

unsigned unsigned a;
